--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/myself.jpg" alt="no-image">
+                        <img src="myself.jpg" alt="no-image">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -138,27 +138,27 @@
                 <h1 class="sub-title">My Aspirations</h1>
                 <div class="aspirations-list">
                     <div>
-                        <img src="images/softwareengineer.jpg" alt="n0-image">
+                        <img src="softwareengineer.jpg" alt="n0-image">
                         <h2>Software Engineer:</h2>
                         <p>Crafting robust and efficient software solutions, specializing in coding, testing, and debugging applications. Involved in the entire software development lifecycle.</p>
                     </div>
                     <div>
-                        <img src="images/fullstackengineer.jpg" alt="n0-image">
+                        <img src="fullstackengineer.jpg" alt="n0-image">
                         <h2>Full-Stack Developer:</h2>
                         <p> Mastering both front-end and back-end development, ensuring a seamless user experience. Proficient in various programming languages, databases, and frameworks.</p>
                     </div>
                     <div> 
-                        <img src="images/systemsenginner.jpg" alt="n0-image">
+                        <img src="systemsenginner.jpg" alt="n0-image">
                         <h2>Systems Engineer:</h2>
                         <p> Designing, implementing, and managing complex information systems. Involves hardware, software, and network components to ensure smooth operation of an organization's IT infrastructure.</p>
                     </div>
                     <div> 
-                        <img src="images/cybersecurity.jpg" alt="n0-image">
+                        <img src="cybersecurity.jpg" alt="n0-image">
                         <h2>Cybersecurity Specialist:</h2>
                         <p> Protecting systems, networks, and programs from digital attacks. Implementing security measures, monitoring for potential threats, and responding to incidents to safeguard sensitive information.</p>
                     </div>
                     <div> 
-                        <img src="images/roboticengineer.jpg" alt="n0-image">
+                        <img src="roboticengineer.jpg" alt="n0-image">
                         <h2>Robotics Engineer:</h2>
                         <p>Innovating in the realm of robotics, designing and developing intelligent machines. Involves programming, testing, and enhancing robotic systems for various applications.</p>
                     </div>
@@ -173,7 +173,7 @@
                 <h1 class="sub-title">My Hobbies</h1>
                 <div class="hobby-list">
                     <div class="hobby">
-                        <img src="images/cooking.jpg" alt="n0-image">
+                        <img src="cooking.jpg" alt="n0-image">
                         <div class="layer">
                             <h3>Cooking</h3>
                             <p>Food is life, and in my culinary world, you are what you eat. Gender-based roles have no place in my kitchen—what matters is a shared love for food and the joy it brings. I believe in the power of a well-cooked meal to unite people, transcending boundaries and fostering connections.
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <div class="hobby">
-                        <img src="images/farming.jpg" alt="n0-image">
+                        <img src="farming.jpg" alt="n0-image">
                         <div class="layer">
                             <h3>Farming</h3>
                             <p>Agriculture is not just a profession; it's the backbone of our sustenance. I'm dedicated to putting my academic knowledge into practical use, envisioning a future where Lesotho is self-sufficient in food production. My goal is to contribute to this vision, seeing agriculture not only as a means of sustenance but also as a source of income and opportunity for growth.
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="hobby">
-                        <img src="images/cycling.jpg" alt="n0-image">
+                        <img src="cycling.jpg" alt="n0-image">
                         <div class="layer">
                             <h3>Cycling</h3>
                             <p>Embracing self-improvement, I've transitioned from walking by foot to cycling as a mode of transportation. In a world where transportation costs are on the rise and environmental concerns loom, cycling offers an eco-friendly solution. It's not just about maintaining good health; it's a declaration of confidence and pride in what I have. As a youth, I believe in working towards personal improvement and inspiring others to do the same.
@@ -223,7 +223,7 @@
                         <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" id="linkedin"></i></a>
                         <a href="https://gmail.com/" target="_blank"><i class="fa fa-envelope" id="envelope"></i></a>
                     </div>
-                    <a href="images/CV.pdf" download="CV" target="_blank" class="btn btn2">Download CV</a>
+                    <a href="CV.pdf" download="CV" target="_blank" class="btn btn2">Download CV</a>
                 </div>
             </div>
         </div>
